--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./Styles/index.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./Assets/Icons/coding.png" />
     <title>Francisco Muñiz</title>
 </head>
+
 <body>
-    
+    <main class="main">
+        <section class="landing">
+            <div class="landing__languageButtonsContainer">
+
+                <div class="landing__languageButton">
+                    <span class="buttonShadow shadow"></span>
+                    <button class="landing__button frontShadow active">Español</button>
+                </div>
+
+                <div class="landing__languageButton">
+                    <span class="buttonShadow shadow"></span>
+                    <button class="landing__button frontShadow">English</button>
+                </div>
+            </div>
+
+            <div class="landing__mainTextContainer">
+                <div class="landing__mainTextLineContainer">
+                    <h1 class="landing__title">Hola, soy</h1>
+                    <div>
+                        <span class="nameShadowWidth shadow"></span>
+                        <span class="textBox frontShadow">Francisco Muñiz</span>
+                    </div>
+                </div>
+                <div class="landing__mainTextLineContainer">
+                    <h2 class="landing__title">Actualmente soy un</h2>
+                    <div>
+                        <span class="roleShadowWidth shadow"></span>
+                        <span class="textBox frontShadow">Junior Web Developer</span>
+                    </div>
+                </div>
+                <p class="landing__text">Soy un entusiasta de las Tecnologías Web y me mantengo siempre aprendiendo
+                    cosas nuevas </p>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
