Generados los estilos generales de la Landing section

--- a/index.html
+++ b/index.html
@@ -29,20 +29,42 @@
             <div class="landing__mainTextContainer">
                 <div class="landing__mainTextLineContainer">
                     <h1 class="landing__title">Hola, soy</h1>
-                    <div>
+                    <div class="hover--rotate">
                         <span class="nameShadowWidth shadow"></span>
-                        <span class="textBox frontShadow">Francisco Muñiz</span>
+                        <span class="frontShadow">Francisco Muñiz</span>
                     </div>
                 </div>
                 <div class="landing__mainTextLineContainer">
                     <h2 class="landing__title">Actualmente soy un</h2>
-                    <div>
+                    <div class="hover--rotate">
                         <span class="roleShadowWidth shadow"></span>
-                        <span class="textBox frontShadow">Junior Web Developer</span>
+                        <span class="frontShadow">Junior Web Developer</span>
                     </div>
                 </div>
                 <p class="landing__text">Soy un entusiasta de las Tecnologías Web y me mantengo siempre aprendiendo
                     cosas nuevas </p>
+            </div>
+
+
+            <div class="landing__socialContainer">
+                <div class="hover--rotate">
+                    <span class="shadow"></span>
+                    <span class="frontShadow">Contáctame!</span>
+                </div>
+                <div class="landing__socialContainer">
+                    <img src="./Assets/Icons/linkedin.png" alt="Icono de Github" class="landing__socialIMG" />
+                    <div class="">
+                        <span class="shadow"></span>
+                        <span class="frontShadow">LinkedIn</span>
+                    </div>
+                </div>
+                <div class="landing__socialContainer">
+                    <img src="./Assets/Icons/github.png" alt="Icono de Github" class="landing__socialIMG" />
+                    <div class="">
+                        <span class="shadow"></span>
+                        <span class="frontShadow">GitHub</span>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
