--- a/index.html
+++ b/index.html
@@ -1,73 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="./Styles/index.css" type="text/css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="./Styles/index.css" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./Assets/Icons/coding.png" />
     <title>Francisco Muñiz</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <main class="main">
-        <section class="landing">
-            <div class="landing__languageButtonsContainer">
+      <section class="landing">
+        <div class="landing__languageButtonsContainer">
+          <div class="landing__languageButton">
+            <span class="buttonShadow shadow"></span>
+            <button class="landing__button frontShadow active">Español</button>
+          </div>
 
-                <div class="landing__languageButton">
-                    <span class="buttonShadow shadow"></span>
-                    <button class="landing__button frontShadow active">Español</button>
-                </div>
+          <div class="landing__languageButton">
+            <span class="buttonShadow shadow"></span>
+            <button class="landing__button frontShadow">English</button>
+          </div>
+        </div>
 
-                <div class="landing__languageButton">
-                    <span class="buttonShadow shadow"></span>
-                    <button class="landing__button frontShadow">English</button>
-                </div>
+        <div class="landing__mainTextContainer">
+          <div class="landing__mainTextLineContainer">
+            <h1 class="landing__title">Hola, soy</h1>
+            <div class="hover--rotate">
+              <span class="nameShadowWidth shadow"></span>
+              <span class="frontShadow">Francisco Muñiz</span>
             </div>
-
-            <div class="landing__mainTextContainer">
-                <div class="landing__mainTextLineContainer">
-                    <h1 class="landing__title">Hola, soy</h1>
-                    <div class="hover--rotate">
-                        <span class="nameShadowWidth shadow"></span>
-                        <span class="frontShadow">Francisco Muñiz</span>
-                    </div>
-                </div>
-                <div class="landing__mainTextLineContainer">
-                    <h2 class="landing__title">Actualmente soy un</h2>
-                    <div class="hover--rotate">
-                        <span class="roleShadowWidth shadow"></span>
-                        <span class="frontShadow">Junior Web Developer</span>
-                    </div>
-                </div>
-                <p class="landing__text">Soy un entusiasta de las Tecnologías Web y me mantengo siempre aprendiendo
-                    cosas nuevas </p>
+          </div>
+          <div class="landing__mainTextLineContainer">
+            <h2 class="landing__title">Actualmente soy un</h2>
+            <div class="hover--rotate">
+              <span class="roleShadowWidth shadow"></span>
+              <span class="frontShadow">Junior Web Developer</span>
             </div>
+          </div>
+          <p class="landing__text">
+            Soy un entusiasta de las Tecnologías Web y me mantengo siempre
+            aprendiendo cosas nuevas
+          </p>
+        </div>
 
-
-            <div class="landing__socialContainer">
-                <div class="hover--rotate">
-                    <span class="shadow"></span>
-                    <span class="frontShadow">Contáctame!</span>
-                </div>
-                <div class="landing__socialContainer">
-                    <img src="./Assets/Icons/linkedin.png" alt="Icono de Github" class="landing__socialIMG" />
-                    <div class="">
-                        <span class="shadow"></span>
-                        <span class="frontShadow">LinkedIn</span>
-                    </div>
-                </div>
-                <div class="landing__socialContainer">
-                    <img src="./Assets/Icons/github.png" alt="Icono de Github" class="landing__socialIMG" />
-                    <div class="">
-                        <span class="shadow"></span>
-                        <span class="frontShadow">GitHub</span>
-                    </div>
-                </div>
+        <div class="landing__socialContainer">
+          <div class="hover--rotate">
+            <span class="shadow"></span>
+            <span class="frontShadow">Contáctame!</span>
+          </div>
+          <div class="landing__socialContainer">
+            <img
+              src="./Assets/Icons/linkedin.png"
+              alt="Icono de Github"
+              class="landing__socialIMG"
+            />
+            <div>
+              <span class="shadow"></span>
+              <span class="frontShadow hover--innerShadow">LinkedIn</span>
             </div>
-        </section>
+          </div>
+          <div class="landing__socialContainer">
+            <img
+              src="./Assets/Icons/github.png"
+              alt="Icono de Github"
+              class="landing__socialIMG"
+            />
+            <div>
+              <span class="shadow"></span>
+              <span class="frontShadow hover--innerShadow">GitHub</span>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
-
+  </body>
 </html>
