Avanzado con los estilos de la sección de proyectos

--- a/index.html
+++ b/index.html
@@ -74,6 +74,31 @@
           </div>
         </div>
       </section>
+
+      <section class="projects">
+        <span class="projects__title shadow"></span>
+        <h2 class="projects__title frontShadow">Proyectos</h2>
+
+        <section class="projects__container">
+          <article class="projects__project">
+            <img src="./Assets/Images/main-bg.jpg" alt="Imagen del proyecto" />
+            <div class="projects__projectRight">
+              <h3 class="projects__projectTitle">Ecommerce</h3>
+              <p class="projects__projectText">Este proyecto utiliza:</p>
+              <p class="projects__projectText">React Native</p>
+              <p class="projects__projectText">
+                Es una aplicación web en la cual apliqué los conocimeintos
+                adquiridos en React, haciendo una página Ecommerce y
+                conectandola a Firebase
+              </p>
+              <div class="projects__projectRedirections">
+                <a href="#">Página Web</a>
+                <a href="#">GitHub</a>
+              </div>
+            </div>
+          </article>
+        </section>
+      </section>
     </main>
   </body>
 </html>
