Avanzado con los estilos de la sección de proyectos y desarrollada la sección About Me

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <body>
     <main class="main">
+      <!-- * Inicio de la sección del Landing -->
       <section class="landing">
         <div class="landing__languageButtonsContainer">
           <div class="landing__languageButton">
@@ -75,6 +76,9 @@
         </div>
       </section>
 
+      <!-- * Final de la Sección del Landing -->
+      <!-- * Inicio de la Sección de Proyectos -->
+
       <section class="projects">
         <span class="projects__title shadow"></span>
         <h2 class="projects__title frontShadow">Proyectos</h2>
@@ -85,20 +89,268 @@
             <div class="projects__projectRight">
               <h3 class="projects__projectTitle">Ecommerce</h3>
               <p class="projects__projectText">Este proyecto utiliza:</p>
-              <p class="projects__projectText">React Native</p>
+              <p class="projects__projectText projects__centerText">
+                React Native
+              </p>
               <p class="projects__projectText">
                 Es una aplicación web en la cual apliqué los conocimeintos
                 adquiridos en React, haciendo una página Ecommerce y
                 conectandola a Firebase
               </p>
               <div class="projects__projectRedirections">
-                <a href="#">Página Web</a>
-                <a href="#">GitHub</a>
+                <a href="#" class="projectLink__left projects__projectLink"
+                  >Página Web</a
+                >
+                <a href="#" class="projectLink__right projects__projectLink"
+                  >GitHub</a
+                >
+              </div>
+            </div>
+          </article>
+
+          <article class="projects__project">
+            <img src="./Assets/Images/main-bg.jpg" alt="Imagen del proyecto" />
+            <div class="projects__projectRight">
+              <h3 class="projects__projectTitle">Ecommerce</h3>
+              <p class="projects__projectText">Este proyecto utiliza:</p>
+              <p class="projects__projectText projects__centerText">
+                React Native
+              </p>
+              <p class="projects__projectText">
+                Es una aplicación web en la cual apliqué los conocimeintos
+                adquiridos en React, haciendo una página Ecommerce y
+                conectandola a Firebase
+              </p>
+              <div class="projects__projectRedirections">
+                <a href="#" class="projectLink__left projects__projectLink"
+                  >Página Web</a
+                >
+                <a href="#" class="projectLink__right projects__projectLink"
+                  >GitHub</a
+                >
+              </div>
+            </div>
+          </article>
+
+          <article class="projects__project">
+            <img src="./Assets/Images/main-bg.jpg" alt="Imagen del proyecto" />
+            <div class="projects__projectRight">
+              <h3 class="projects__projectTitle">Ecommerce</h3>
+              <p class="projects__projectText">Este proyecto utiliza:</p>
+              <p class="projects__projectText projects__centerText">
+                React Native
+              </p>
+              <p class="projects__projectText">
+                Es una aplicación web en la cual apliqué los conocimeintos
+                adquiridos en React, haciendo una página Ecommerce y
+                conectandola a Firebase
+              </p>
+              <div class="projects__projectRedirections">
+                <a href="#" class="projectLink__left projects__projectLink"
+                  >Página Web</a
+                >
+                <a href="#" class="projectLink__right projects__projectLink"
+                  >GitHub</a
+                >
+              </div>
+            </div>
+          </article>
+
+          <article class="projects__project">
+            <img src="./Assets/Images/main-bg.jpg" alt="Imagen del proyecto" />
+            <div class="projects__projectRight">
+              <h3 class="projects__projectTitle">Ecommerce</h3>
+              <p class="projects__projectText">Este proyecto utiliza:</p>
+              <p class="projects__projectText projects__centerText">
+                React Native
+              </p>
+              <p class="projects__projectText">
+                Es una aplicación web en la cual apliqué los conocimeintos
+                adquiridos en React, haciendo una página Ecommerce y
+                conectandola a Firebase
+              </p>
+              <div class="projects__projectRedirections">
+                <a href="#" class="projectLink__left projects__projectLink"
+                  >Página Web</a
+                >
+                <a href="#" class="projectLink__right projects__projectLink"
+                  >GitHub</a
+                >
               </div>
             </div>
           </article>
         </section>
       </section>
+
+      <!-- * Final de la Sección de Proyectos -->
+
+      <!-- * Inicio de la Sección del Algoritmo de Clasificación -->
+
+      <section class="algorithm"></section>
+
+      <!-- * Final de la Sección del Algoritmo de Clasificación -->
+
+      <!-- * Inicio de la Sección del About Me -->
+
+      <section class="about">
+        <div class="about__titleContainer">
+          <span class="projects__title shadow"></span>
+          <h2 class="projects__title frontShadow">Sobre mi</h2>
+        </div>
+
+        <!-- Inicio de la Información personal -->
+
+        <section class="about__aboutMe">
+          <p class="aboutMe__text">
+            <img
+              src="./Assets/Images/main-bg.jpg"
+              alt="Foto del programador del portfolio"
+              class="aboutMe__img"
+              align="left"
+            />
+            Soy un joven con pasión por la programación y siempre trato de
+            mantenerme evolucionando mis habilidades como desarrollador
+            aprendiendo nuevas cosas
+          </p>
+
+          <p class="aboutMe__text">
+            Soy un Junior FrontEnd Developer (en camino a Full Stack) proactivo
+            y ávido para la resolución de problemas técnicos relacionados con el
+            software
+          </p>
+
+          <p class="aboutMe__text">
+            Tengo experiencia trabajando en equipo y me defino como un
+            constructor de relaciones interpersonales basadas en la confianza
+            Actualmente me encuentro en la ciudad de Posadas - Misiones
+          </p>
+
+          <p class="aboutMe__text">
+            Actualmente me encuentro en la ciudad de Posadas - Misiones
+          </p>
+
+          <div clear="all"></div>
+
+          <div class="hover--rotate about__downloadCV">
+            <span class="shadow about__downloadShadow"></span>
+            <span class="frontShadow">Descarga mi CV</span>
+          </div>
+        </section>
+
+        <!-- Final de la Información personal -->
+
+        <!-- Inicio Tecnologías Utilizadas -->
+
+        <section class="about__technologies">
+          <div class="centerObject">
+            <span class="shadow about__technologiesShadow"></span>
+            <span class="frontShadow">He trabajado con:</span>
+          </div>
+
+          <section class="about__technologiesContainer">
+            <div class="about__technology">
+              <div class="about__technology--hover">HTML</div>
+              <img
+                src="./Assets/Images/HTML-logo.png"
+                alt="HTML-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+
+            <div class="about__technology">
+              <div class="about__technology--hover">CSS</div>
+              <img
+                src="./Assets/Images/CSS-logo.png"
+                alt="CSS-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+
+            <div class="about__technology">
+              <div class="about__technology--hover">SASS</div>
+              <img
+                src="./Assets/Images/SASS-logo.png"
+                alt="SASS-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+
+            <div class="about__technology">
+              <div class="about__technology--hover">JavaScript</div>
+              <img
+                src="./Assets/Images/JS-logo.png"
+                alt="JavaScript-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+
+            <div class="about__technology">
+              <div class="about__technology--hover">React</div>
+              <img
+                src="./Assets/Images/REACT-logo.png"
+                alt="React-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+          </section>
+
+          <div class="centerObject">
+            <span class="shadow about__alsoShadow"></span>
+            <span class="frontShadow">También he utilizado:</span>
+          </div>
+
+          <section class="about__technologiesContainer">
+            <div class="about__technology">
+              <div class="about__technology--hover">Git</div>
+              <img
+                src="./Assets/Images/GIT-logo.png"
+                alt="Git-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+
+            <div class="about__technology">
+              <div class="about__technology--hover">GitHub</div>
+              <img
+                src="./Assets/Images/GITHUB-logo.png"
+                alt="GitHub-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+
+            <div class="about__technology">
+              <div class="about__technology--hover">BEM</div>
+              <img
+                src="./Assets/Images/BEM.jpg"
+                alt="BEM-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+
+            <div class="about__technology">
+              <div class="about__technology--hover">Firebase</div>
+              <img
+                src="./Assets/Images/FIREBASE-logo.png"
+                alt="Firebase-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+
+            <div class="about__technology">
+              <div class="about__technology--hover">Spotify API</div>
+              <img
+                src="./Assets/Images/SPOTIFY.jpg"
+                alt="SpotifyAPI-Logo"
+                class="about__technologyIMG"
+              />
+            </div>
+          </section>
+        </section>
+
+        <!-- Final Tecnologías Utilizadas -->
+      </section>
+
+      <!-- * Final de la Sección del About Me -->
     </main>
   </body>
 </html>
