Avanzado con los estilos finales del portfolio, faltan detalles finales en pantalla full hf

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             <h1 class="landing__title">Hola, soy</h1>
             <div class="hover--rotate">
               <span class="nameShadowWidth shadow"></span>
-              <span class="frontShadow">Francisco Muñiz</span>
+              <p class="frontShadow">Francisco Muñiz</p>
             </div>
           </div>
           <div class="landing__mainTextLineContainer">
             <h2 class="landing__title">Actualmente soy un</h2>
             <div class="hover--rotate">
               <span class="roleShadowWidth shadow"></span>
-              <span class="frontShadow">Junior Web Developer</span>
+              <p class="frontShadow">Junior Web Developer</p>
             </div>
           </div>
           <p class="landing__text">
@@ -49,8 +49,9 @@
         <div class="landing__socialContainer">
           <div class="hover--rotate">
             <span class="shadow"></span>
-            <span class="frontShadow">Contáctame!</span>
+            <p class="frontShadow">Contáctame!</p>
           </div>
+
           <div class="landing__socialContainer">
             <img
               src="./Assets/Icons/linkedin.png"
@@ -59,9 +60,10 @@
             />
             <div>
               <span class="shadow"></span>
-              <span class="frontShadow hover--innerShadow">LinkedIn</span>
+              <p class="frontShadow hover--innerShadow">LinkedIn</p>
             </div>
           </div>
+
           <div class="landing__socialContainer">
             <img
               src="./Assets/Icons/github.png"
@@ -70,7 +72,7 @@
             />
             <div>
               <span class="shadow"></span>
-              <span class="frontShadow hover--innerShadow">GitHub</span>
+              <p class="frontShadow hover--innerShadow">GitHub</p>
             </div>
           </div>
         </div>
@@ -225,22 +227,22 @@
           <div class="algorithm__algorithmSelector">
             <div class="hover--rotate about__downloadCV">
               <span class="shadow"></span>
-              <span class="frontShadow active">Bubble Sort</span>
+              <p class="frontShadow active">Bubble Sort</p>
             </div>
 
             <div class="hover--rotate about__downloadCV">
               <span class="shadow"></span>
-              <span class="frontShadow">Selection Sort</span>
+              <p class="frontShadow">Selection Sort</p>
             </div>
 
             <div class="hover--rotate about__downloadCV">
               <span class="shadow"></span>
-              <span class="frontShadow">Insertion Sort</span>
+              <p class="frontShadow">Insertion Sort</p>
             </div>
 
             <div class="hover--rotate about__downloadCV">
               <span class="shadow"></span>
-              <span class="frontShadow">Quick Sort</span>
+              <p class="frontShadow">Quick Sort</p>
             </div>
           </div>
         </section>
@@ -315,7 +317,7 @@
 
           <div class="hover--rotate centerObject">
             <span class="shadow about__downloadShadow"></span>
-            <span class="frontShadow">Descarga mi CV</span>
+            <p class="frontShadow">Descarga mi CV</p>
           </div>
         </section>
 
@@ -326,7 +328,7 @@
         <section class="about__technologies">
           <div class="centerObject">
             <span class="shadow about__technologiesShadow"></span>
-            <span class="frontShadow">He trabajado con:</span>
+            <p class="frontShadow">He trabajado con:</p>
           </div>
 
           <section class="about__technologiesContainer">
@@ -378,7 +380,7 @@
 
           <div class="centerObject">
             <span class="shadow about__alsoShadow"></span>
-            <span class="frontShadow">También he utilizado:</span>
+            <p class="frontShadow">También he utilizado:</p>
           </div>
 
           <section class="about__technologiesContainer">
@@ -451,7 +453,7 @@
             />
             <div>
               <span class="shadow"></span>
-              <span class="frontShadow hover--innerShadow">LinkedIn</span>
+              <p class="frontShadow hover--innerShadow">LinkedIn</p>
             </div>
           </div>
           <div class="landing__socialContainer">
@@ -462,7 +464,7 @@
             />
             <div>
               <span class="shadow"></span>
-              <span class="frontShadow hover--innerShadow">GitHub</span>
+              <p class="frontShadow hover--innerShadow">GitHub</p>
             </div>
           </div>
         </div>
@@ -501,7 +503,7 @@
 
             <div class="hover--rotate centerObject">
               <span class="shadow"></span>
-              <span class="frontShadow">Enviar</span>
+              <p class="frontShadow">Enviar</p>
             </div>
           </form>
         </div>
