Arreglada la longitud del nombre y el cargo a ocupar

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             <h1 class="landing__title">Hola, soy</h1>
             <div class="hover--rotate">
               <span class="nameShadowWidth shadow"></span>
-              <p class="frontShadow">Francisco Muñiz</p>
+              <p class="frontShadow nameShadowWidth">Francisco Muñiz</p>
             </div>
           </div>
           <div class="landing__mainTextLineContainer">
             <h2 class="landing__title">Actualmente soy un</h2>
             <div class="hover--rotate">
               <span class="roleShadowWidth shadow"></span>
-              <p class="frontShadow">Junior Web Developer</p>
+              <p class="frontShadow roleShadowWidth">Junior Web Developer</p>
             </div>
           </div>
           <p class="landing__text">
