--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                 min="10"
                 max="30"
                 step="1"
+                value="10"
                 class="algorithm__columnsQuantity"
               />
               <p class="algorithm__text">10</p>
@@ -214,9 +215,10 @@
               <p class="algorithm__text">Velocidad de la animación:</p>
               <input
                 type="range"
-                min="5"
+                min="1"
                 max="25"
                 step="1"
+                value="10"
                 class="algorithm__columnsQuantity"
               />
               <p class="algorithm__text">1 ms</p>
