--- a/index.html
+++ b/index.html
@@ -30,14 +30,21 @@
             <h1 class="landing__title">Hola, soy</h1>
             <div class="hover--rotate">
               <span class="nameShadowWidth shadow"></span>
-              <p class="frontShadow nameShadowWidth">Francisco Muñiz</p>
+              <a href="#aboutMe" class="frontShadow nameShadowWidth"
+                >Francisco Muñiz</a
+              >
             </div>
           </div>
           <div class="landing__mainTextLineContainer">
             <h2 class="landing__title">Actualmente soy un</h2>
             <div class="hover--rotate">
               <span class="roleShadowWidth shadow"></span>
-              <p class="frontShadow roleShadowWidth">Junior Web Developer</p>
+              <a
+                href="https://www.freelancermap.com/blog/es/diferencias-programador-junior-y-senior/#:~:text=Un%20programador%20de%20nivel%20junior,catalogado%20como%20un%20programador%20senior."
+                target="_blank"
+                class="frontShadow roleShadowWidth"
+                >Junior Web Developer</a
+              >
             </div>
           </div>
           <p class="landing__text">
@@ -48,8 +55,8 @@
 
         <div class="landing__socialContainer">
           <div class="hover--rotate">
-            <span class="shadow"></span>
-            <p class="frontShadow">Contáctame!</p>
+            <span class="shadow landing__contactMeShadowWidth"></span>
+            <a href="#contact" class="frontShadow">Contáctame!</a>
           </div>
 
           <div class="landing__socialContainer">
@@ -59,8 +66,13 @@
               class="landing__socialIMG"
             />
             <div>
-              <span class="shadow"></span>
-              <p class="frontShadow hover--innerShadow">LinkedIn</p>
+              <span class="shadow landing__linkedIn"></span>
+              <a
+                href="https://www.linkedin.com/in/francisco-muñiz-011010232/"
+                target="_blank"
+                class="frontShadow hover--innerShadow"
+                >LinkedIn</a
+              >
             </div>
           </div>
 
@@ -71,8 +83,13 @@
               class="landing__socialIMG"
             />
             <div>
-              <span class="shadow"></span>
-              <p class="frontShadow hover--innerShadow">GitHub</p>
+              <span class="shadow landing__github"></span>
+              <a
+                href="https://github.com/Pancho157"
+                target="_blank"
+                class="frontShadow hover--innerShadow"
+                >GitHub</a
+              >
             </div>
           </div>
         </div>
@@ -81,7 +98,7 @@
       <!-- * Final de la Sección del Landing -->
       <!-- * Inicio de la Sección de Proyectos -->
 
-      <section class="projects">
+      <section class="projects" id="projects">
         <span class="mainTitle shadow"></span>
         <h2 class="mainTitle frontShadow">Proyectos</h2>
 
@@ -113,15 +130,15 @@
           <article class="projects__project">
             <img src="./Assets/Images/main-bg.jpg" alt="Imagen del proyecto" />
             <div class="projects__projectRight">
-              <h3 class="projects__projectTitle">Ecommerce</h3>
+              <h3 class="projects__projectTitle">App de juegos</h3>
               <p class="projects__projectText">Este proyecto utiliza:</p>
               <p class="projects__projectText projects__centerText">
-                React Native
+                HTML - CSS - JavaScript
               </p>
               <p class="projects__projectText">
-                Es una aplicación web en la cual apliqué los conocimeintos
-                adquiridos en React, haciendo una página Ecommerce y
-                conectandola a Firebase
+                Es una aplicación educativa con el fin de enseñar a niños
+                pequeños sobre algún tópico de selección de manera entretenida y
+                superando retos visuales
               </p>
               <div class="projects__projectRedirections">
                 <a href="#" class="projectLink__left projects__projectLink"
@@ -137,15 +154,14 @@
           <article class="projects__project">
             <img src="./Assets/Images/main-bg.jpg" alt="Imagen del proyecto" />
             <div class="projects__projectRight">
-              <h3 class="projects__projectTitle">Ecommerce</h3>
+              <h3 class="projects__projectTitle">Simbiontes</h3>
               <p class="projects__projectText">Este proyecto utiliza:</p>
               <p class="projects__projectText projects__centerText">
                 React Native
               </p>
               <p class="projects__projectText">
-                Es una aplicación web en la cual apliqué los conocimeintos
-                adquiridos en React, haciendo una página Ecommerce y
-                conectandola a Firebase
+                Es una página web para una comunidad fungui , la cual quiere
+                expandír su comunidad y llegar a más personas
               </p>
               <div class="projects__projectRedirections">
                 <a href="#" class="projectLink__left projects__projectLink"
@@ -161,15 +177,14 @@
           <article class="projects__project">
             <img src="./Assets/Images/main-bg.jpg" alt="Imagen del proyecto" />
             <div class="projects__projectRight">
-              <h3 class="projects__projectTitle">Ecommerce</h3>
+              <h3 class="projects__projectTitle">Página Estática</h3>
               <p class="projects__projectText">Este proyecto utiliza:</p>
               <p class="projects__projectText projects__centerText">
-                React Native
+                HTML - CSS
               </p>
               <p class="projects__projectText">
-                Es una aplicación web en la cual apliqué los conocimeintos
-                adquiridos en React, haciendo una página Ecommerce y
-                conectandola a Firebase
+                Es una página web que tiene el objetivo de demostrar los
+                conocimientos adquiridos en el curso de HTML y CSS de CoderHouse
               </p>
               <div class="projects__projectRedirections">
                 <a href="#" class="projectLink__left projects__projectLink"
@@ -188,7 +203,7 @@
 
       <!-- * Inicio de la Sección del Algoritmo de Clasificación -->
 
-      <section class="algorithm">
+      <section class="algorithm" id="algorithm">
         <div class="mainTitleContainer">
           <span class="mainTitle shadow"></span>
           <h2 class="mainTitle frontShadow">Algoritmos de Clasificación</h2>
@@ -267,8 +282,15 @@
         </section>
 
         <div class="algorithm__buttonsContainer">
-          <button class="algorithm__sortButtons">Ordenar</button>
-          <button class="algorithm__sortButtons">Parar Algoritmo</button>
+          <div class="about__downloadCV">
+            <span class="shadow"></span>
+            <p class="frontShadow algorithm__sortButtons">Ordenar</p>
+          </div>
+
+          <div class="about__downloadCV">
+            <span class="shadow"></span>
+            <p class="frontShadow algorithm__sortButtons">Parar Algoritmo</p>
+          </div>
         </div>
 
         <!-- Final de la visual del algoritmo -->
@@ -278,7 +300,7 @@
 
       <!-- * Inicio de la Sección del About Me -->
 
-      <section class="about">
+      <section class="about" id="aboutMe">
         <div class="mainTitleContainer">
           <span class="mainTitle shadow"></span>
           <h2 class="mainTitle frontShadow">Sobre mi</h2>
@@ -297,20 +319,19 @@
             Soy un joven con pasión por la programación y siempre trato de
             mantenerme evolucionando mis habilidades como desarrollador
             aprendiendo nuevas cosas
-          </p>
-
-          <p class="aboutMe__text">
+            <br />
+            <br />
             Soy un Junior FrontEnd Developer (en camino a Full Stack) proactivo
             y ávido para la resolución de problemas técnicos relacionados con el
             software
           </p>
-
+          <br />
           <p class="aboutMe__text">
             Tengo experiencia trabajando en equipo y me defino como un
             constructor de relaciones interpersonales basadas en la confianza
             Actualmente me encuentro en la ciudad de Posadas - Misiones
           </p>
-
+          <br />
           <p class="aboutMe__text">
             Actualmente me encuentro en la ciudad de Posadas - Misiones
           </p>
@@ -330,7 +351,9 @@
         <section class="about__technologies">
           <div class="centerObject">
             <span class="shadow about__technologiesShadow"></span>
-            <p class="frontShadow">He trabajado con:</p>
+            <p class="frontShadow about__technologiesShadow">
+              He trabajado con:
+            </p>
           </div>
 
           <section class="about__technologiesContainer">
@@ -382,7 +405,7 @@
 
           <div class="centerObject">
             <span class="shadow about__alsoShadow"></span>
-            <p class="frontShadow">También he utilizado:</p>
+            <p class="frontShadow about__alsoShadow">También he utilizado:</p>
           </div>
 
           <section class="about__technologiesContainer">
@@ -440,7 +463,7 @@
 
       <!-- * Inicio de la Sección de Contacto -->
 
-      <section>
+      <section id="contact">
         <div class="mainTitleContainer">
           <span class="mainTitle shadow"></span>
           <h2 class="mainTitle frontShadow">Contáctame!</h2>
@@ -504,8 +527,8 @@
             ></textarea>
 
             <div class="hover--rotate centerObject">
-              <span class="shadow"></span>
-              <p class="frontShadow">Enviar</p>
+              <span class="shadow contact__sendButton--width"></span>
+              <p class="frontShadow contact__sendButton--width">Enviar</p>
             </div>
           </form>
         </div>
