Generadas las actualizaciones de valores para los rangos y el cambio de clase active para los botones de algoritmos

--- a/index.html
+++ b/index.html
@@ -222,8 +222,9 @@
                 step="1"
                 value="10"
                 class="algorithm__columnsQuantity"
+                id="colsQuantity"
               />
-              <p class="algorithm__text">10</p>
+              <p class="algorithm__text" id="colsValue">10</p>
             </div>
 
             <div class="algorithm__range">
@@ -235,8 +236,9 @@
                 step="1"
                 value="10"
                 class="algorithm__columnsQuantity"
+                id="speedRange"
               />
-              <p class="algorithm__text">1 ms</p>
+              <p class="algorithm__text" id="speedValue">1 ms</p>
             </div>
           </div>
 
@@ -244,22 +246,22 @@
           <div class="algorithm__algorithmSelector">
             <div class="hover--rotate about__downloadCV">
               <span class="shadow"></span>
-              <p class="frontShadow active">Bubble Sort</p>
+              <p class="frontShadow algorithm__option active">Bubble Sort</p>
             </div>
 
             <div class="hover--rotate about__downloadCV">
               <span class="shadow"></span>
-              <p class="frontShadow">Selection Sort</p>
+              <p class="frontShadow algorithm__option">Selection Sort</p>
             </div>
 
             <div class="hover--rotate about__downloadCV">
               <span class="shadow"></span>
-              <p class="frontShadow">Insertion Sort</p>
+              <p class="frontShadow algorithm__option">Insertion Sort</p>
             </div>
 
             <div class="hover--rotate about__downloadCV">
               <span class="shadow"></span>
-              <p class="frontShadow">Quick Sort</p>
+              <p class="frontShadow algorithm__option">Quick Sort</p>
             </div>
           </div>
         </section>
@@ -496,13 +498,13 @@
 
         <div class="contact">
           <div class="contact__mapContainer">
-            <iframe
+            <!-- <iframe
               class="contact__map"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113355.06544861024!2d-55.99455653417701!3d-27.396139495246434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9457be7f080496c3%3A0xccbff374623e7b9a!2sPosadas%2C%20Misiones!5e0!3m2!1ses-419!2sar!4v1657547275084!5m2!1ses-419!2sar"
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+            ></iframe> -->
             <p class="contact__mapText">
               Si estás cerca contáctame y tomemos un café
             </p>
@@ -536,5 +538,8 @@
 
       <!-- * Final de la Sección de Contacto -->
     </main>
+
+    <script type="text/javascript" src="./JS/ChangeActiveAlgorithm.js"></script>
+    <script type="text/javascript" src="./JS/ChangeRangeValues.js"></script>
   </body>
 </html>
