--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         <section class="projects__container">
           <article class="projects__project">
-            <img src="./Assets/Images/main-bg.jpg" alt="Imagen del proyecto" />
+            <img src="./Assets/Images/Ecommerce.png" alt="Imagen del proyecto" />
             <div class="projects__projectRight">
               <h3 class="projects__projectTitle">Ecommerce</h3>
               <p class="projects__projectText">Este proyecto utiliza:</p>
@@ -128,7 +128,7 @@
           </article>
 
           <article class="projects__project">
-            <img src="./Assets/Images/main-bg.jpg" alt="Imagen del proyecto" />
+            <img src="./Assets/Images/App de juegos.png" alt="Imagen del proyecto" />
             <div class="projects__projectRight">
               <h3 class="projects__projectTitle">App de juegos</h3>
               <p class="projects__projectText">Este proyecto utiliza:</p>
@@ -152,7 +152,7 @@
           </article>
 
           <article class="projects__project">
-            <img src="./Assets/Images/main-bg.jpg" alt="Imagen del proyecto" />
+            <img src="./Assets/Images/Simbiontes.png" alt="Imagen del proyecto" />
             <div class="projects__projectRight">
               <h3 class="projects__projectTitle">Simbiontes</h3>
               <p class="projects__projectText">Este proyecto utiliza:</p>
@@ -175,7 +175,7 @@
           </article>
 
           <article class="projects__project">
-            <img src="./Assets/Images/main-bg.jpg" alt="Imagen del proyecto" />
+            <img src="./Assets/Images/Página estática.png" alt="Imagen del proyecto" />
             <div class="projects__projectRight">
               <h3 class="projects__projectTitle">Página Estática</h3>
               <p class="projects__projectText">Este proyecto utiliza:</p>
@@ -504,7 +504,7 @@
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
             <p class="contact__mapText">
-              Si estás cerca contáctame y tomemos un café
+              Si estás cerca, contáctame y tomemos un café
             </p>
           </div>
 
